# bbc-gominer-demo

./: README.md  main.go  miner.go  util.go
bbc/: CMakeLists.txt  cryptonight.c  cryptonight.h
